# demo_uv

./: README.md
example-app/: pyproject.toml
example-lib/: pyproject.toml
example-pkg/: pyproject.toml
