[project]
name = "example-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Duke", email = "David.F.Duke@gmail.com" }
]
requires-python = ">=3.8.0"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
